objects/HealthCloudGA__EhrCondition__c.object
<CustomObject>
    <description>Use to record detailed information about conditions, problems or diagnoses recognized by a clinician. There are many uses including: recording a Diagnosis during an Encounter; populating a problem List or a Summary Statement, such as a Discharge Summary.</description>
    <fields>
        <fullName>HealthCloudGA__AbatementDetail255__c</fullName>
        <label>Abatement Detail 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AbatementDetail__c</fullName>
        <label>Abatement Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Individual account which represents the patient in force.com</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EHR Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AsserterPatient__c</fullName>
        <description>Person who asserts this condition</description>
        <label>Asserter Patient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AsserterPractitioner__c</fullName>
        <label>Asserter Practitioner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CategoryCode__c</fullName>
        <description>Category Symbol in syntax defined by the system</description>
        <label>Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CategorySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Category System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CatergoryLabel__c</fullName>
        <label>Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CertaintyCode__c</fullName>
        <description>Certainty Symbol in syntax defined by the system</description>
        <label>Certainty Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CertaintyLabel__c</fullName>
        <label>Certainty Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CertaintySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Certainty System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeLabel__c</fullName>
        <label>Code Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CodeSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Code System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Code__c</fullName>
        <description>Category Symbol in syntax defined by the system</description>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DateAsserted__c</fullName>
        <label>Date Asserted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DateDocumented__c</fullName>
        <description>Date when the EHR Condition is documented.</description>
        <formula>IF( ISBLANK( HealthCloudGA__Encounter__r.HealthCloudGA__PeriodEnd__c ) , 
        IF( ISBLANK( HealthCloudGA__Encounter__r.HealthCloudGA__HospitalizePeriodEnd__c ),
        IF( ISBLANK( HealthCloudGA__Encounter__r.HealthCloudGA__PeriodStart__c ), IF( ISBLANK(  HealthCloudGA__Encounter__r.HealthCloudGA__HospitalizePeriodStart__c  ),
        IF(ISBLANK(HealthCloudGA__DateAsserted__c),HealthCloudGA__SourceSystemModified__c , HealthCloudGA__DateAsserted__c)
        ,HealthCloudGA__Encounter__r.HealthCloudGA__HospitalizePeriodStart__c) 
        ,HealthCloudGA__Encounter__r.HealthCloudGA__PeriodStart__c )
        ,HealthCloudGA__Encounter__r.HealthCloudGA__HospitalizePeriodEnd__c) 
        ,HealthCloudGA__Encounter__r.HealthCloudGA__PeriodEnd__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Documented</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Encounter when condition first asserted</description>
        <label>Encounter</label>
        <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
        <relationshipLabel>EhrConditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EvidenceCode__c</fullName>
        <description>Evidence Symbol in syntax defined by the system</description>
        <label>Evidence Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EvidenceDetail__c</fullName>
        <description>Supporting information found elsewhere</description>
        <label>Evidence Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EvidenceLabel__c</fullName>
        <label>Evidence Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EvidenceSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Evidence System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsAbated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Abated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationCode__c</fullName>
        <description>Location Symbol in syntax defined by the system</description>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationDetail__c</fullName>
        <description>Precise Location details</description>
        <label>Location Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationLabel__c</fullName>
        <label>Location Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LocationSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Location System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Onset__c</fullName>
        <label>Onset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SeverityCode__c</fullName>
        <description>Severity Symbol in syntax defined by the system</description>
        <label>Severity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SeverityLabel__c</fullName>
        <label>Severity Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SeveritySystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Severity System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusCode__c</fullName>
        <description>Status Symbol in syntax defined by the system</description>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusLabel__c</fullName>
        <label>Status Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StatusSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Status System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__YearDocumented__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(HealthCloudGA__DateDocumented__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Documented</label>
        <type>Text</type>
    </fields>
    <label>EHR Condition</label>
    <nameField>
        <displayFormat>Cond-{0}</displayFormat>
        <label>EHR Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>